# daisy-mailinator-pro

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: email_body_structure.md
src/email/config/: logging_config.py  settings.py
src/email/notifications/: additional_error_info.py  email_exceptions.py  email_models.py  email_templates.py  factory.py  graph_email_client.py  idempotency.py  notification_service.py
tests/: send_success_email.py
tests/notifications/: test_email_templates.py  test_graph_email_client.py  test_idempotency.py
