[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "crh-daisybill-email"
version = "0.1.0"
description = "Production email notification module for CRH DaisyBill RPA automation"
requires-python = ">=3.11"
dependencies = [
  "msal==1.34.0",
  "python-dotenv==1.2.1",
  "requests==2.32.5",
  "tenacity==9.1.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
